--- a/bee/index.html
+++ b/bee/index.html
@@ -16,7 +16,7 @@
         <div class="hex" id="bottom"></div>
         <div class="hex" id="bottomright"></div>
         <div class="hex" id="topright"></div>
-        <div class="test"></div>
+        <!-- <div class="test"></div> -->
       </div>
 </body>
 </html>
