--- a/bee/index.html
+++ b/bee/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="score"></div>
     <div class="board">
         <div class="enter"></div>
         <div class="hex" id="center"></div>
@@ -17,6 +18,7 @@
         <div class="hex" id="bottomright"></div>
         <div class="hex" id="topright"></div>
         <!-- <div class="test"></div> -->
-      </div>
+    </div>
+    <div class="words"></div>
 </body>
 </html>
