--- a/bee/index.html
+++ b/bee/index.html
@@ -11,7 +11,7 @@
     <div class="score"></div>
     <div class="board">
         <div class="enter"></div>
-        <div class="hex" id="center"></div>
+        <div class="hex" id="center">F</div>
         <div class="hex" id="top"></div>
         <div class="hex" id="topleft"></div>
         <div class="hex" id="bottomleft"></div>
