--- a/bee/index.html
+++ b/bee/index.html
@@ -5,35 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript" async></script>
 </head>
 <body>
     <div class="score"></div>
     <div class="board">
         <div class="enter"></div>
-        <div class="hex" id="center">
-            <div class="letter" id="centerLetter"></div>
-        </div>
-        <div class="hex" id="top">
-            <div class="letter" id="topLetter"></div>
-        </div>
-        <div class="hex" id="topleft">
-            <div class="letter" id="topleftLetter"></div>
-        </div>
-        <div class="hex" id="bottomleft">
-            <div class="letter" id="bottomleftLetter"></div>
-        </div>
-        <div class="hex" id="bottom">
-            <div class="letter" id="bottomLetter"></div>
-        </div>
-        <div class="hex" id="bottomright">
-            <div class="letter" id="bottomrightLetter"></div>
-        </div>
-        <div class="hex" id="topright">
-            <div class="letter" id="toprightLetter"></div>
-        </div>
+        <div class="hex" id="center"></div>
+        <div class="hex" id="top"></div>
+        <div class="hex" id="topleft"></div>
+        <div class="hex" id="bottomleft"></div>
+        <div class="hex" id="bottom"></div>
+        <div class="hex" id="bottomright"></div>
+        <div class="hex" id="topright"></div>
         <!-- <div class="test"></div> -->
+        <div></div>
     </div>
     <div class="words"></div>
+
+    
 </body>
 </html>
