--- a/bee/index.html
+++ b/bee/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="score"></div>
     <div class="board">
-        <div class="enter"></div>
+        <div class="guess"></div>
         <div class="hex" id="center"></div>
         <div class="hex" id="top"></div>
         <div class="hex" id="topleft"></div>
@@ -19,7 +19,11 @@
         <div class="hex" id="bottomright"></div>
         <div class="hex" id="topright"></div>
         <!-- <div class="test"></div> -->
-        <div></div>
+        <div class="btn-container">
+            <button class="btn" id="enter">Enter</button>
+            <button class="btn" id="shuffle">Shuffle</button>
+            <button class="btn" id="delete">Delete</button>
+        </div>
     </div>
     <div class="words"></div>
 
